Use the cluster-config tz instead of hostPath

--- a/apps/base/auth-lemonldap/deploy/statefulSet.yaml
+++ b/apps/base/auth-lemonldap/deploy/statefulSet.yaml
@@ -70,8 +70,9 @@ spec:
             cpu: "150m"
             memory: "384Mi"
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - name: lemonldap-data
           mountPath: /var/lib/lemonldap-ng-pv
@@ -82,9 +83,9 @@ spec:
           mountPath: /var/lib/lemonldap-ng/server-certs/ca.crt
           subPath: ca.crt
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: lemonldap-data
         persistentVolumeClaim:
           claimName: lemonldap-data
