--- a/apps/base/download-deluge/deploy/web/web-statefulSet.yaml
+++ b/apps/base/download-deluge/deploy/web/web-statefulSet.yaml
@@ -59,8 +59,9 @@ spec:
             cpu: 250m
             memory: 128Mi
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - name: deluge-data
           mountPath: /home/deluge/.config/deluge
@@ -74,9 +75,9 @@ spec:
         - name: tmp-volume
           mountPath: /tmp
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: deluge-data
         persistentVolumeClaim:
           claimName: deluge-data
