--- a/apps/base/download-pyload/deploy/statefulSet.yaml
+++ b/apps/base/download-pyload/deploy/statefulSet.yaml
@@ -62,8 +62,9 @@ spec:
             cpu: 500m
             memory: 256Mi
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - name: pyload-data
           mountPath: /config
@@ -74,9 +75,9 @@ spec:
         - name: tmp-volume
           mountPath: /tmp
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: pyload-data
         persistentVolumeClaim:
           claimName: pyload-data
