--- a/apps/base/download-sickchill/deploy/statefulSet.yaml
+++ b/apps/base/download-sickchill/deploy/statefulSet.yaml
@@ -54,8 +54,9 @@ spec:
             cpu: 500m
             memory: 256Mi
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - name: sickchill-data
           mountPath: /data
@@ -70,9 +71,9 @@ spec:
         - name: tmp-volume
           mountPath: /tmp
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: sickchill-data
         persistentVolumeClaim:
           claimName: sickchill-data
