--- a/apps/base/monitoring-nginx-exporter/deploy/daemonSet.yaml
+++ b/apps/base/monitoring-nginx-exporter/deploy/daemonSet.yaml
@@ -47,13 +47,14 @@ spec:
             cpu: 100m
             memory: 32Mi
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       imagePullSecrets:
       - name: docker-config
       nodeSelector:
