--- a/apps/base/tool-miniflux/deploy/miniflux/deployment.yaml
+++ b/apps/base/tool-miniflux/deploy/miniflux/deployment.yaml
@@ -65,16 +65,17 @@ spec:
             cpu: 250m
             memory: 128Mi
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - name: cluster-ca-volume
           mountPath: /etc/ssl/cluster/ca.crt
           subPath: ca.crt
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
