--- a/apps/base/tool-miniflux/deploy/reminiflux/deployment.yaml
+++ b/apps/base/tool-miniflux/deploy/reminiflux/deployment.yaml
@@ -46,8 +46,9 @@ spec:
             cpu: 100m
             memory: 16Mi
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - name: cluster-ca-volume
           mountPath: /etc/ssl/cluster/ca.crt
@@ -55,9 +56,9 @@ spec:
         - name: tmp-volume
           mountPath: /tmp
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
