--- a/apps/base/auth-openldap/deploy/statefulSet.yaml
+++ b/apps/base/auth-openldap/deploy/statefulSet.yaml
@@ -22,8 +22,9 @@ spec:
         imagePullPolicy: IfNotPresent
         args: ["--copy-service"]
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - name: openldap-data
           subPath: data
@@ -62,9 +63,9 @@ spec:
             cpu: "150m"
             memory: "128Mi"
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: openldap-data
         persistentVolumeClaim:
           claimName: openldap-data
