--- a/apps/base/cluster-reloader/deploy/deployment.yaml
+++ b/apps/base/cluster-reloader/deploy/deployment.yaml
@@ -31,6 +31,15 @@ spec:
           limits:
             cpu: 50m
             memory: 64Mi
+        volumeMounts:
+        - name: cluster-config
+          mountPath: /etc/localtime
+          subPath: localtime
+          readOnly: true
+      volumes:
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       serviceAccountName: reloader
       imagePullSecrets:
       - name: docker-config
