--- a/apps/base/dev-minio/deploy/deployment.yaml
+++ b/apps/base/dev-minio/deploy/deployment.yaml
@@ -44,6 +44,10 @@ spec:
             - "-ce"
             - "/usr/bin/docker-entrypoint.sh minio server /export -S /etc/minio/certs/ --address :9000 --console-address :9001"
           volumeMounts:
+            - name: cluster-config
+              mountPath: /etc/localtime
+              subPath: localtime
+              readOnly: true
             - name: minio-user
               mountPath: "/tmp/credentials"
               readOnly: true
@@ -82,6 +86,9 @@ spec:
               cpu: 200m
               memory: 512Mi
       volumes:
+        - name: cluster-config
+          configMap:
+            name: cluster-config
         - name: export
           persistentVolumeClaim:
             claimName: minio
