--- a/apps/base/home-roomassistant/deploy/deployment.yaml
+++ b/apps/base/home-roomassistant/deploy/deployment.yaml
@@ -54,15 +54,16 @@ spec:
           initialDelaySeconds: 3
           periodSeconds: 5
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - name: roomassistant-config
           mountPath: /room-assistant/config
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: roomassistant-config
         configMap:
           name: roomassistant-config
