--- a/apps/base/infra-blocky/deploy/redis/statefulSet.yaml
+++ b/apps/base/infra-blocky/deploy/redis/statefulSet.yaml
@@ -46,8 +46,9 @@ spec:
             cpu: 75m
             memory: 32Mi
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - name: redis-config
           mountPath: /usr/local/etc/redis/redis.conf
@@ -55,9 +56,9 @@ spec:
         - name: data-volume
           mountPath: /data
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: redis-config
         secret:
           secretName: redis-config
