--- a/apps/base/infra-docker-registry/deploy/deployment.yaml
+++ b/apps/base/infra-docker-registry/deploy/deployment.yaml
@@ -63,8 +63,9 @@ spec:
             cpu: 500m
             memory: 512Mi
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - name: docker-registry-data
           mountPath: /var/lib/registry
@@ -77,9 +78,9 @@ spec:
         - name: certs-volume
           mountPath: /certs
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: docker-registry
         secret:
           secretName: docker-registry
