--- a/apps/base/infra-gandi-livedns/deploy/cronJob.yaml
+++ b/apps/base/infra-gandi-livedns/deploy/cronJob.yaml
@@ -37,13 +37,14 @@ spec:
                   cpu: 50m
                   memory: 16Mi
             volumeMounts:
-            - name: tz-config
+            - name: cluster-config
               mountPath: /etc/localtime
+              subPath: localtime
               readOnly: true
           volumes:
-          - name: tz-config
-            hostPath:
-              path: /etc/localtime
+          - name: cluster-config
+            configMap:
+              name: cluster-config
           imagePullSecrets:
           - name: docker-config
           nodeSelector:
