--- a/apps/base/infra-mailhog/deploy/deployment.yaml
+++ b/apps/base/infra-mailhog/deploy/deployment.yaml
@@ -43,13 +43,14 @@ spec:
             cpu: 100m
             memory: 64Mi
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       imagePullSecrets:
       - name: docker-config
       nodeSelector:
