--- a/apps/base/infra-zonemta/deploy/mongo/statefulSet.yaml
+++ b/apps/base/infra-zonemta/deploy/mongo/statefulSet.yaml
@@ -67,8 +67,9 @@ spec:
             cpu: 100m
             memory: 384Mi
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - mountPath: /tmp
           name: tmp-volume
@@ -81,9 +82,9 @@ spec:
         - name: mongo-init
           mountPath: /docker-entrypoint-initdb.d/
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: mongo-data
         persistentVolumeClaim:
           claimName: mongo-data
