--- a/apps/base/logging-elasticsearch/deploy/exporter/deployment.yaml
+++ b/apps/base/logging-elasticsearch/deploy/exporter/deployment.yaml
@@ -76,15 +76,17 @@ spec:
             cpu: 100m
             memory: 64Mi
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
+          readOnly: true
         - name: cluster-ca-volume
           mountPath: /etc/ssl/cluster/ca.crt
           subPath: ca.crt
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
