--- a/apps/base/monitoring-grafana/deploy/statefulSet.yaml
+++ b/apps/base/monitoring-grafana/deploy/statefulSet.yaml
@@ -61,8 +61,9 @@ spec:
             - ALL
           readOnlyRootFilesystem: true
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - mountPath: /var/lib/grafana
           name: grafana-storage
@@ -97,9 +98,9 @@ spec:
         capability/general-purpose: 'yes'
       serviceAccountName: grafana
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: grafana-storage
         persistentVolumeClaim:
           claimName: grafana-data
