--- a/apps/base/monitoring-release-watcher/deploy/deployment.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/deployment.yaml
@@ -43,8 +43,9 @@ spec:
             cpu: 100m
             memory: 64Mi
         volumeMounts:
-        - name: tz-config
+        - name: cluster-config
           mountPath: /etc/localtime
+          subPath: localtime
           readOnly: true
         - name: release-watcher-config
           mountPath: /data/config.yaml
@@ -54,9 +55,9 @@ spec:
         - name: tmp-volume
           mountPath: /tmp
       volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
+      - name: cluster-config
+        configMap:
+          name: cluster-config
       - name: release-watcher-config
         secret:
           secretName: release-watcher
