--- a/apps/base/auth-lemonldap/deploy/statefulSet.yaml
+++ b/apps/base/auth-lemonldap/deploy/statefulSet.yaml
@@ -53,8 +53,11 @@ spec:
           value: "info"
         securityContext:
           # lemnldap requires root and a writable root filesystem
-          #runAsNonRoot: true
-          #readOnlyRootFilesystem: true
+          runAsNonRoot: false
+          readOnlyRootFilesystem: false
+          allowPrivilegeEscalation: true
+          seccompProfile:
+            type: RuntimeDefault
         readinessProbe:
           httpGet:
             scheme: HTTP
