Configure pod-security for cluster-intel-gpu-plugin

--- a/apps/base/cluster-intel-gpu-plugin/deploy/daemonSet.yaml
+++ b/apps/base/cluster-intel-gpu-plugin/deploy/daemonSet.yaml
@@ -27,7 +27,7 @@ spec:
               fieldRef:
                 fieldPath: spec.nodeName
         securityContext:
-          #runAsNonRoot: true
+          runAsNonRoot: false
           readOnlyRootFilesystem: true
         volumeMounts:
         - name: cluster-config
