--- a/apps/base/cluster-intel-gpu-plugin/deploy/namespace.yaml
+++ b/apps/base/cluster-intel-gpu-plugin/deploy/namespace.yaml
@@ -2,3 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: cluster-intel-gpu-plugin
+  labels:
+    pod-security.kubernetes.io/enforce: privileged
+    pod-security.kubernetes.io/audit: privileged
+    pod-security.kubernetes.io/warn: privileged
