--- a/apps/base/cluster-kubernetes-replicator/deploy/namespace.yaml
+++ b/apps/base/cluster-kubernetes-replicator/deploy/namespace.yaml
@@ -2,3 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: cluster-kubernetes-replicator
+  labels:
+    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/audit: restricted
+    pod-security.kubernetes.io/warn: restricted
